--- a/Dependencies/d3dx.ini
+++ b/Dependencies/d3dx.ini
@@ -38,6 +38,18 @@ exclude_recursive = desktop.ini
 ; Logging options.
 ; Comment line or set value to 0 for no logging.
 ;------------------------------------------------------------------------------------------------------
+
+[Output]
+; show_keyname_when_activate 用于按键活动时显示按键节名称，默认关闭
+; use to debug key bindings, enable to see which key was pressed when a command
+; was executed.
+show_keyname_when_activate = false
+; show_keyval_change 用于显示键活动时，所拥有值的变化，默认关闭，可以绑定快捷键或直接指定 true/false 值
+; use to debug key bindings resulting in values changes
+; show_keyval_change can be set to a key combination
+; or directly set to true/false
+show_keyval_change = no_modifiers VK_F5
+
 [Logging]
 
 ; Log all API usage
@@ -70,6 +82,14 @@ debug_locks=0
 ; the SOS tones:
 crash=0
 
+; overlay_level 选项用于设置左上角输出等级
+; overlay_level use to set the output level of 3DMigoto's overlay on the left-top corner of the screen.
+; NO_ANY_OVERLAY   = 0 不输出任何信息
+; NO_WARNING	   = 1 不输出警告信息
+; ONLY_INFO	       = 2 只输出INFO信息
+; ACORDING_HUNTING = 3 按照Hunting模式输出信息(原来的默认模式)
+; ALL_ENABLE	   = 4 输出所有信息
+overlay_level = 3
 ; ------------------------------------------------------------------------------------------------------
 ; Command list to run on launch / after config reload.
 ; ------------------------------------------------------------------------------------------------------
@@ -528,6 +548,9 @@ allow_platform_update=1
 ; Settings used by the external 3DMigoto Loader
 ;------------------------------------------------------------------------------------------------------
 [Loader]
+; 防闪退启动模式，默认关闭
+prevent_crashe_mode = false
+
 ; Target process to load into. You can optionally include part of the directory
 ; structure in case the game's executable name is generic.
 ;target = \Dead or Alive 6\DOA6.exe
